--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TINCIP=169.254.1.11
+TINCIP=169.254.1.2
 DOMAIN=ver.ai 
 WORKDIR=/mnt/d/ver.ai
 #TORRENT
@@ -16,10 +16,10 @@ DAEMON2NAME=daemon1
 DAEMON2PORT1=6885
 DAEMON2BOARD1=6008
 DAEMON2GRPCPORT=50055
-DAEMON2UUID=development-5d04-434f-8df7-064d71b72112
+DAEMON2UUID=111978ef-5d04-434f-8df7-064d71b72112
 DAEMON2KEY=51ee9b70-6014-11e8-b136-df69e10a0754
 SERVERUUID=DevNatsServerUUID
-SERVERDOMAIN=deploy.ver.ai
+SERVERDOMAIN=ver.ai
 SERVERNATSPORT=4222
 SERVERGRPCPORT=50056
 SERVERTRACKERPORT=6969
@@ -51,15 +51,22 @@ DOCKER_NOTEBOOK_IMAGE=jupyter/minimal-notebook:e1677043235c
 JUPYTER_ENABLE_LAB=true
 #LOCAL_NOTEBOOK_IMAGE=jupyter/minimal-notebook:latest
 LOCAL_NOTEBOOK_IMAGE=verai/jnbk1
+#LOCAL_NOTEBOOK_IMAGE=redaboumahdi/image_processing:gpu
+#LOCAL_NOTEBOOK_IMAGE=jupyter/tensorflow-notebook:latest
+#LOCAL_NOTEBOOK_IMAGE=jupyter/tensorflow-notebook:latest
+#LOCAL_NOTEBOOK_IMAGE=digitalanatomist/hub-deep-learning-notebook-gpu:latest
+#LOCAL_NOTEBOOK_IMAGE=tf-notebook
 
 # Notebook directory in the container.
 # This will be /home/jovyan/work if the default
 # This directory is stored as a docker volume for each user
-DOCKER_NOTEBOOK_DIR=/home/jovyan/work
+DOCKER_NOTEBOOK_DIR=/home/jovyan
+#DOCKER_NOTEBOOK_DIR=/home/jovyan/work
 #DOCKER_NOTEBOOK_DIR=/home/root
 
 # Docker run command to use when spawning single-user containers
 DOCKER_SPAWN_CMD=start-singleuser.sh
+#DOCKER_SPAWN_CMD='notebook'
 #DOCKER_SPAWN_CMD=start-notebook.sh
 #DOCKER_SPAWN_CMD='start-singleuser.sh jupyter lab'
 #DOCKER_SPAWN_CMD=start.sh
@@ -80,3 +87,4 @@ DB_VOLUME_CONTAINER=/var/lib/postgresql/data
 POSTGRES_DB=jupyterhub
 USER root
 GRANT_SUDO=yes
+VERBOOKSHAREDPATH=/opt/VerAI/serve
