--- a/.env
+++ b/.env
@@ -45,12 +45,15 @@ DOCKER_NETWORK_NAME=jupyterhub-network
 
 # Single-user Jupyter Notebook server container image
 DOCKER_NOTEBOOK_IMAGE=jupyter/minimal-notebook:e1677043235c
+#DOCKER_NOTEBOOK_IMAGE=newjnbk
 
 # the local image we use, after pinning jupyterhub version
 #LOCAL_NOTEBOOK_IMAGE=jupyterhub-user
 JUPYTER_ENABLE_LAB=true
 #LOCAL_NOTEBOOK_IMAGE=jupyter/minimal-notebook:latest
-LOCAL_NOTEBOOK_IMAGE=verai/jnbk1
+#LOCAL_NOTEBOOK_IMAGE=notebookgpu
+#LOCAL_NOTEBOOK_IMAGE=verai/jnbk1
+LOCAL_NOTEBOOK_IMAGE=4f7d29fe50ce
 #LOCAL_NOTEBOOK_IMAGE=redaboumahdi/image_processing:gpu
 #LOCAL_NOTEBOOK_IMAGE=jupyter/tensorflow-notebook:latest
 #LOCAL_NOTEBOOK_IMAGE=jupyter/tensorflow-notebook:latest
@@ -67,6 +70,7 @@ DOCKER_NOTEBOOK_DIR=/home/jovyan
 # Docker run command to use when spawning single-user containers
 DOCKER_SPAWN_CMD=start-singleuser.sh
 #DOCKER_SPAWN_CMD='notebook'
+#DOCKER_SPAWN_CMD='start.sh'
 #DOCKER_SPAWN_CMD=start-notebook.sh
 #DOCKER_SPAWN_CMD='start-singleuser.sh jupyter lab'
 #DOCKER_SPAWN_CMD=start.sh
