verai serverextension + verai frontend extension

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-TINCIP=169.254.1.2
+TINCIP=169.254.1.22
 DOMAIN=ver.ai 
-WORKDIR=/mnt/d/ver.ai
+WORKDIR=/home/gpu/deployverai
 #TORRENT
 TOR1NAME=product
 TOR1PORT1=6881
@@ -11,14 +11,14 @@ TOR2PORT2=25402
 #GRPC
 GRPCPORT=50055
 ###
-SUFFIX=_dev
+SUFFIX=_devnew
 DAEMON2NAME=daemon1
-DAEMON2PORT1=6885
-DAEMON2BOARD1=6008
+DAEMON2PORT1=7885
+DAEMON2BOARD1=7008
 DAEMON2GRPCPORT=50055
-DAEMON2UUID=111978ef-5d04-434f-8df7-064d71b72112
+DAEMON2UUID=gpuid
 DAEMON2KEY=51ee9b70-6014-11e8-b136-df69e10a0754
-SERVERUUID=DevNatsServerUUID
+SERVERUUID=80504874-9c78-11e8-b444-63c0bd1a1961
 SERVERDOMAIN=ver.ai
 SERVERNATSPORT=4222
 SERVERGRPCPORT=50056
@@ -41,7 +41,7 @@ JUPYTERHUB_VERSION=0.8.1
 DOCKER_MACHINE_NAME=jupyterhub
 
 # Name of Docker network
-DOCKER_NETWORK_NAME=jupyterhub-network
+DOCKER_NETWORK_NAME=jupyterhub-network2
 
 # Single-user Jupyter Notebook server container image
 DOCKER_NOTEBOOK_IMAGE=jupyter/minimal-notebook:e1677043235c
@@ -53,7 +53,7 @@ JUPYTER_ENABLE_LAB=true
 #LOCAL_NOTEBOOK_IMAGE=jupyter/minimal-notebook:latest
 #LOCAL_NOTEBOOK_IMAGE=notebookgpu
 #LOCAL_NOTEBOOK_IMAGE=verai/jnbk1
-LOCAL_NOTEBOOK_IMAGE=4f7d29fe50ce
+LOCAL_NOTEBOOK_IMAGE=debf850b7f75
 #LOCAL_NOTEBOOK_IMAGE=redaboumahdi/image_processing:gpu
 #LOCAL_NOTEBOOK_IMAGE=jupyter/tensorflow-notebook:latest
 #LOCAL_NOTEBOOK_IMAGE=jupyter/tensorflow-notebook:latest
@@ -76,16 +76,16 @@ DOCKER_SPAWN_CMD=start-singleuser.sh
 #DOCKER_SPAWN_CMD=start.sh
 
 # Name of JupyterHub container data volume
-DATA_VOLUME_HOST=jupyterhub-data
+DATA_VOLUME_HOST=jupyterhub-data2
 
 # Data volume container mount point
 DATA_VOLUME_CONTAINER=/data
 
 # Name of JupyterHub postgres database data volume
-DB_VOLUME_HOST=jupyterhub-db-data
+DB_VOLUME_HOST=jupyterhub-db-data2
 
 # Postgres volume container mount point
-DB_VOLUME_CONTAINER=/var/lib/postgresql/data
+DB_VOLUME_CONTAINER=/var/lib/postgresql/data2
 
 # The name of the postgres database containing JupyterHub state
 POSTGRES_DB=jupyterhub
