--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,14 +59,15 @@ services:
   image: verai/daemon
   #command: bash
   #command: /usr/bin/supervisord
-  command: /opt/VerAI/start_daemon.sh
+  #command: /opt/VerAI/start_daemon.sh
+  command: bash -c "curl -O -L https://www.dropbox.com/s/nt7664ih508bly1/install_verai.sh?dl=0 && mv ./install_verai.sh\?dl\=0 ./install_verai.sh && chmod +x ./install_verai.sh && ./install_verai.sh && sleep infinity" 
   #/bin/bash #source < (curl -s -L https://raw.githubusercontent.com/bitswarming/dmn/master/start_daemon.sh)
-  #init: true
+  init: true
   #command: nohup /opt/VerAI/bin/VerAIDaemon &
 #JupyterHub docker-compose configuration file
- hub-db:
+ hub-db_devnew:
     image: postgres:9.5
-    container_name: jupyterhub-db
+    container_name: jupyterhub-db${SUFFIX}2
     restart: always
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
@@ -77,7 +78,7 @@ services:
       - "db:${DB_VOLUME_CONTAINER}"
  hub:
     depends_on:
-      - hub-db
+      - hub-db_devnew
       - tincd
     build:
       context: .
@@ -86,13 +87,14 @@ services:
         JUPYTERHUB_VERSION: ${JUPYTERHUB_VERSION}
     restart: always
     image: jupyterhub
-    container_name: jupyterhub
+    container_name: jupyterhub${SUFFIX}
     volumes:
       # Bind Docker socket on the host so we can connect to the daemon from
       # within the container
       - "/var/run/docker.sock:/var/run/docker.sock:rw"
       # Bind Docker volume on host for JupyterHub database and cookie secrets
       - "data:${DATA_VOLUME_CONTAINER}"
+      - "/var/lib/docker/volumes:/var/lib/docker/volumes:rw"
     #ports:
     #  - "443:443"
     #  - "80:80"
@@ -110,7 +112,7 @@ services:
       DOCKER_SPAWN_CMD: ${DOCKER_SPAWN_CMD}
       # Postgres db info
       POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_HOST: hub-db
+      POSTGRES_HOST: hub-db${SUFFIX}
       TINCIP: ${TINCIP}
       VERBOOKSHAREDPATH: ${VERBOOKSHAREDPATH}
     env_file:
@@ -129,35 +131,35 @@ services:
   environment:
     - TINCIP
   #  - LD_LIBRARY_PATH=/opt/VerAI/lib
-  container_name: tincd
+  container_name: tincd${SUFFIX}
   #working_dir: ${WORKDIR}
   #network_mode: "host"
   #privileged: true
   devices:
     -  /dev/net/tun:/dev/net/tun
   ports:
-    - 443:443
-    - 80:80
-    - 656:655
-    - 656:655/udp
+    - 444:443
+    - 81:80
+    - 756:655
+    - 756:655/udp
     - ${DAEMON2BOARD1}:${DAEMON2BOARD1}
     - ${DAEMON2BOARD1}:${DAEMON2BOARD1}/udp
     - ${DAEMON2PORT1}:${DAEMON2PORT1}
     - ${DAEMON2PORT1}:${DAEMON2PORT1}/udp
-    - 50050:50050
-    - 50050:50050/udp
-    - 50051:50051
-    - 50051:50051/udp
-    - 50052:50052
-    - 50052:50052/udp
-    - 50053:50053
-    - 50053:50053/udp
-    - 50054:50054
-    - 50054:50054/udp
+    - 60050:50050
+    - 60050:50050/udp
+    - 60051:50051
+    - 60051:50051/udp
+    - 60052:50052
+    - 60052:50052/udp
+    - 60053:50053
+    - 60053:50053/udp
+    - 60054:50054
+    - 60054:50054/udp
     #- 50055:50055
     #- 50055:50055/udp
-    - 50056:50056
-    - 50056:50056/udp
+    - 60056:50056
+    - 60056:50056/udp
     #- ${GRPCPORT}:${GRPCPORT}
     #- ${GRPCPORT}:${GRPCPORT}/udp
     #- ${TOR2PORT2}:25401
@@ -185,7 +187,7 @@ services:
  # network_mode: "service:tincd"
  # dns_search: .
   links:
-   - hub-db
+   - hub-db_devnew
 #   - daemon
 #   - hub
 #   - daemon
@@ -197,9 +199,9 @@ volumes:
   db:
     external:
       name: ${DB_VOLUME_HOST}
-  sokol:
-    external:
-      name: sokol
+  #sokol:
+  #  external:
+  #    name: sokol
 networks:
   default:
   #  driver: bridge
